# routes/policies.js
@@ -2,7 +2,7 @@ const express = require('express');
 const router = express.Router();
 const { searchByUsername, getAggregatedPolicies } = require('../controllers/policySearch');
 
-// Add search by username
+// Policy Search by username
 router.get('/search', searchByUsername);
 
 // Aggregated policies grouped by user
